# Building-an-Application-Development-Framework

./: .gitignore
Chapter4/: pyproject.toml  rag.py
Chapter6/: requirements.txt
Chapter6/0.MinimalWorkingExample/: main.py
Chapter6/0.MinimalWorkingExample/.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _hashlib.data.json  (+164 more)
Chapter6/1.ControlFlow/: main.py
Chapter6/2.BasicComponents/: main.py
Chapter6/3.ApplicationContext/: main.py  output.txt
Chapter6/3.ApplicationContext/adf/: app.py  messages.py
Chapter6/3.ApplicationContextAndLibraries/: main.py
Chapter6/3.ApplicationContextAndLibraries/adf/: app.py
Chapter6/4.Packaging/: .coverage  pyproject.toml
Chapter6/4.Packaging/adf/: app.py
Chapter6/4.Packaging/tests/: conftest.py  test_app.py
Chapter6/5.LibrariesAndTransport/: .env  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
Chapter6/5.LibrariesAndTransport/adf/: .coverage  app.py  messages.py  pyproject.toml
Chapter6/5.LibrariesAndTransport/adf/adf/: app.py  messages.py
Chapter6/5.LibrariesAndTransport/adf/adf/agents/: protocol.py
Chapter6/5.LibrariesAndTransport/adf/adf/rag/: mixin.py
Chapter6/5.LibrariesAndTransport/adf/adf/rag/vectorstore/: opensearch.py  protocol.py
Chapter6/5.LibrariesAndTransport/adf/adf/rag/vectorstore/embeddings/: protocol.py
Chapter6/5.LibrariesAndTransport/adf/adf/routers/: role.py
Chapter6/5.LibrariesAndTransport/adf/agents/: protocol.py
Chapter6/5.LibrariesAndTransport/adf/rag/: mixin.py
Chapter6/5.LibrariesAndTransport/adf/rag/vectorstore/: opensearch.py
Chapter6/5.LibrariesAndTransport/adf/rag/vectorstore/embeddings/: openai.py
Chapter6/5.LibrariesAndTransport/adf/routers/: __init__.py
Chapter6/5.LibrariesAndTransport/adf/tests/: conftest.py
(+1748 files in other folders)
